:fire: fixed layout not working properly on mobile devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,13 +3,14 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  height: 100vh;
+  width: 100vw;
 }
 
-html,
 body,
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 *,
